made it do some stuff

--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -2,11 +2,7 @@
   "profiles": {
     "taylorswitch": {
       "commandName": "Project",
-      "launchBrowser": false,
-      "launchUrl": "http://localhost:5001",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      "launchUrl": "http://localhost:5001"
     }
   }
 }
