--- a/project.json
+++ b/project.json
@@ -10,7 +10,9 @@
     "Microsoft.Extensions.Logging.Console": "1.0.0",
     "Microsoft.Extensions.Configuration.EnvironmentVariables": "1.0.0",
     "Microsoft.Extensions.Configuration.FileExtensions": "1.0.0",
-    "Microsoft.Extensions.Configuration.Json": "1.0.0"
+    "Microsoft.Extensions.Configuration.Json": "1.0.0",
+    "Microsoft.AspNet.WebApi.Client": "5.2.3",
+    "Microsoft.AspNetCore.StaticFiles": "1.0.0"
   },
 
   "tools": {
@@ -40,7 +42,8 @@
   "publishOptions": {
     "include": [
       "wwwroot",
-      "web.config"
+      "web.config",
+      "hosting.json"
     ]
   },
 
@@ -49,6 +52,6 @@
   },
 
   "tooling": {
-    "defaultNamespace": "jsonmraz"
+    "defaultNamespace": "taylorswitch"
   }
 }
