cleaned up the js (tried to reduce some of that nasty nesting) startup.json moved so i can be access by js (not sure if this is the best way) we shall see

--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "taylorswitch": {
-      "commandName": "Project",
-      "launchUrl": "http://localhost:5001"
+      "commandName": "Project"
     }
   }
 }
